# snowflake-cli-devops

./: README.md  pyproject.toml
sample_projects/current_projects/project1/: snowflake.yml
sample_projects/current_projects/project2/: snowflake.yml
sample_projects/current_projects/project3/: snowflake.yml
sample_projects/current_projects/project4/: snowflake.yml
sample_projects/current_projects/project4/project5/: snowflake.yml
src/snowflake_cli_devops/: __init__.py  commands.py  manager.py  plugin_spec.py
